# fury

./: CMakeLists.txt  README.md
core/Fury/: Core.h  File.h  Input.cpp  Input.h  Math.cpp  Math.h  Path.h  Trace.h
core/Fury/ECS/: EntityComponent.h
core/Fury/Graphics/: Display.h  Shader.h  Time.h  Window.h
core/Fury/Primitives/: Color.cpp  Color.h  Mat3.h  Mat4.cpp  Mat4.h  Quaternion.cpp  Quaternion.h  System.h  Uniform.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
core/include/fury/: box.h  camera.h  camera2d.h  color.h  core.h  debug_draw.h  display.h  entity.h  file.h  game-input.h  game_input.h  game_time.h  input.h  mat3.h  mat4.h  material.h  mathf.h  mesh.h  obj_loader.h  path.h  plane.h  quaternion.h  ray.h  shader.h  system.h  texture2d.h  timef.h  trace.h  triangle.h  uniform.h  vec2.h  vec3.h  vec4.h  vertex.h  window.h
core/include/fury/assets/: asset.h
core/include/fury/ecs/: base_system.h  component.h  component_container.h  ecs_types.h  entity.h  entity_manager.h  system.h
core/include/fury/memory/: allocator.h  global_memory_user.h  linear_allocator.h  memory_chunk_allocator.h  memory_manager.h  pool_allocator.h  stack_allocator.h
core/src/: camera2d.cpp  color.cpp  debug_draw.cpp  display.cpp  game-input.cpp  game_input.cpp  game_time.cpp  mat3.cpp  mat4.cpp  mathf.cpp  plane.cpp  quaternion.cpp  ray.cpp  shader.cpp  texture2d.cpp  timef.cpp  vec2.cpp  vec3.cpp  vec4.cpp  window.cpp
core/src/ecs/: component.cpp  entity.cpp  entity_manager.cpp  system.cpp
core/src/memory/: allocator.cpp  global_memory_user.cpp  linear_allocator.cpp  memory_manager.cpp  pool_allocator.cpp  stack_allocator.cpp
ext/glad/: CMakeLists.txt  glad.cbp
ext/glfw/: GLFW.cbp  README.md
ext/imgui/src/: imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
ext/stb/include/stb/: stb_image.h
src/: main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  shader.fragment.glsl  shader.vertex.glsl
src/z01_rect/: main.cpp  s1.vs
src/z02_point/: main.cpp  s1.vs
src/z03_viewport/: main.cpp  shader.fragment.glsl  shader.vertex.glsl
src/z04_ok/: main.cpp  shader.vertex.glsl
